change tf.losses -> tf.keras.losses for tf.2.0 style

--- a/tf.version.2/02.regression/01.mnist.tf.data.eager.ipynb
+++ b/tf.version.2/02.regression/01.mnist.tf.data.eager.ipynb
@@ -22,8 +22,8 @@
     "  for step in num_batches: # num_batches = int(data_size / batch_size)\n",
     "    1. sampling mini-batches with batch_size\n",
     "      1-1. data augmentation [if you need (actually always)]\n",
-    "    2. calculate the logits # logits = f(x)\n",
-    "    3. calculate the loss # loss = loss(logits, labels)\n",
+    "    2. calculate the predictions # predictions = f(x)\n",
+    "    3. calculate the loss # loss = loss(labels, predictions)\n",
     "    4. calculate the gradient with respect to weights\n",
     "    5. update weights\n",
     "```"
@@ -41,8 +41,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T12:59:14.733848Z",
-     "start_time": "2019-02-27T12:59:12.937555Z"
+     "end_time": "2019-03-11T06:45:38.223183Z",
+     "start_time": "2019-03-11T06:45:36.428740Z"
     }
    },
    "outputs": [],
@@ -71,8 +71,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T12:59:14.743734Z",
-     "start_time": "2019-02-27T12:59:14.736937Z"
+     "end_time": "2019-03-11T06:45:38.232767Z",
+     "start_time": "2019-03-11T06:45:38.225994Z"
     }
    },
    "outputs": [],
@@ -92,8 +92,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T12:59:15.522500Z",
-     "start_time": "2019-02-27T12:59:14.746541Z"
+     "end_time": "2019-03-11T06:45:38.987348Z",
+     "start_time": "2019-03-11T06:45:38.236627Z"
     }
    },
    "outputs": [],
@@ -125,8 +125,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T12:59:15.798635Z",
-     "start_time": "2019-02-27T12:59:15.526204Z"
+     "end_time": "2019-03-11T06:45:39.199543Z",
+     "start_time": "2019-03-11T06:45:38.991391Z"
     }
    },
    "outputs": [],
@@ -153,25 +153,25 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T12:59:15.829317Z",
-     "start_time": "2019-02-27T12:59:15.803894Z"
+     "end_time": "2019-03-11T06:45:39.245935Z",
+     "start_time": "2019-03-11T06:45:39.205080Z"
     }
    },
    "outputs": [],
    "source": [
     "tf.set_random_seed(219)\n",
     "batch_size = 32\n",
-    "max_epochs = 10\n",
+    "max_epochs = 1\n",
     "\n",
     "# for train\n",
     "train_dataset = tf.data.Dataset.from_tensor_slices((train_data, train_labels))\n",
-    "train_dataset = train_dataset.shuffle(buffer_size = 10000)\n",
-    "train_dataset = train_dataset.batch(batch_size = batch_size)\n",
+    "train_dataset = train_dataset.shuffle(buffer_size=10000)\n",
+    "train_dataset = train_dataset.batch(batch_size=batch_size)\n",
     "print(train_dataset)\n",
     "\n",
     "# for test\n",
     "test_dataset = tf.data.Dataset.from_tensor_slices((test_data, test_labels))\n",
-    "test_dataset = test_dataset.batch(batch_size = batch_size)\n",
+    "test_dataset = test_dataset.batch(batch_size=batch_size)\n",
     "print(test_dataset)"
    ]
   },
@@ -189,8 +189,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T12:59:15.843949Z",
-     "start_time": "2019-02-27T12:59:15.835288Z"
+     "end_time": "2019-03-11T06:45:39.259037Z",
+     "start_time": "2019-03-11T06:45:39.250463Z"
     }
    },
    "outputs": [],
@@ -210,16 +210,16 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T12:59:15.933354Z",
-     "start_time": "2019-02-27T12:59:15.848109Z"
+     "end_time": "2019-03-11T06:45:39.501107Z",
+     "start_time": "2019-03-11T06:45:39.265719Z"
     }
    },
    "outputs": [],
    "source": [
     "# without training, just inference a model in eager execution:\n",
     "for images, labels in train_dataset.take(1):\n",
-    "  print(\"Logits: \", model(images[0:1]).numpy())\n",
-    "  logits = model(images, training=True)"
+    "  print(\"Predictions: \", model(images[0:1]).numpy())\n",
+    "  predictions = model(images, training=True)"
    ]
   },
   {
@@ -227,8 +227,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T12:59:15.944542Z",
-     "start_time": "2019-02-27T12:59:15.936236Z"
+     "end_time": "2019-03-11T06:45:39.509483Z",
+     "start_time": "2019-03-11T06:45:39.504245Z"
     }
    },
    "outputs": [],
@@ -250,14 +250,22 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T12:59:15.956826Z",
-     "start_time": "2019-02-27T12:59:15.952587Z"
+     "end_time": "2019-03-11T06:45:39.536454Z",
+     "start_time": "2019-03-11T06:45:39.513107Z"
     }
    },
    "outputs": [],
    "source": [
+    "# use SGD optimizer\n",
     "optimizer = tf.train.GradientDescentOptimizer(0.5)\n",
-    "loss_history = []"
+    "#optimizer = tf.keras.optimizers.SGD(0.5)\n",
+    "\n",
+    "# record accuracy for every epoch\n",
+    "mean_accuracy = tf.keras.metrics.Mean(\"accuracy\")\n",
+    "\n",
+    "# save loss and accuracy history for plot\n",
+    "loss_history = []\n",
+    "accuracy_history = [(0, 0.0)]"
    ]
   },
   {
@@ -272,8 +280,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T13:00:04.297427Z",
-     "start_time": "2019-02-27T12:59:15.960149Z"
+     "end_time": "2019-03-11T06:45:58.014118Z",
+     "start_time": "2019-03-11T06:45:39.538391Z"
     }
    },
    "outputs": [],
@@ -283,20 +291,30 @@
     "  for (step, (images, labels)) in enumerate(train_dataset):\n",
     "    start_time = time.time()\n",
     "    with tf.GradientTape() as tape:\n",
-    "      logits = model(images, training=True)\n",
-    "      loss_value = tf.losses.sparse_softmax_cross_entropy(labels, logits)\n",
+    "      predictions = model(images, training=True)\n",
+    "      #loss_value = tf.losses.sparse_softmax_cross_entropy(labels, logits)\n",
+    "      loss_value = tf.reduce_mean(tf.keras.losses.sparse_categorical_crossentropy(labels, predictions))\n",
+    "      acc_value = tf.reduce_mean(tf.keras.metrics.categorical_accuracy(labels, tf.argmax(predictions, axis=1)))\n",
     "\n",
-    "    loss_history.append(loss_value.numpy())\n",
     "    grads = tape.gradient(loss_value, model.variables)\n",
     "    optimizer.apply_gradients(zip(grads, model.variables),\n",
     "                              global_step=global_step)\n",
+    "    \n",
+    "    loss_history.append((global_step.numpy(), loss_value.numpy()))\n",
+    "    mean_accuracy(acc_value)\n",
     "\n",
     "    if global_step.numpy() % 100 == 0:\n",
     "      clear_output(wait=True)\n",
     "      duration = time.time() - start_time\n",
     "      examples_per_sec = batch_size / float(duration)\n",
-    "      epochs = batch_size * global_step.numpy() / float(len(train_data))\n",
-    "      print(\"epochs: {:.2f}, step: {}, loss: {:g}, ({:.2f} examples/sec; {:.3f} sec/batch)\".format(epochs, global_step.numpy(), loss_value, examples_per_sec, duration))\n",
+    "      epochs = epoch + step * batch_size / float(len(train_data))\n",
+    "      print(\"epochs: {:.2f}, step: {}, loss: {:g}, ({:.2f} examples/sec; {:.4f} sec/batch)\".format(epochs, global_step.numpy(), loss_value.numpy(), examples_per_sec, duration))\n",
+    "      \n",
+    "  # save mean accuracy for plot\n",
+    "  accuracy_history.append((global_step.numpy(), mean_accuracy.result().numpy()))\n",
+    "\n",
+    "  # clear the history\n",
+    "  mean_accuracy.reset_states()\n",
     "\n",
     "print(\"training done!\")"
    ]
@@ -313,15 +331,33 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T13:00:04.570468Z",
-     "start_time": "2019-02-27T13:00:04.299486Z"
+     "end_time": "2019-03-11T06:45:58.204914Z",
+     "start_time": "2019-03-11T06:45:58.016634Z"
     }
    },
    "outputs": [],
    "source": [
-    "plt.plot(loss_history, label='loss')\n",
+    "plt.plot(*zip(*loss_history), label='loss')\n",
     "plt.xlabel('Number of steps')\n",
     "plt.ylabel('Loss value [cross entropy]')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-11T06:45:58.370686Z",
+     "start_time": "2019-03-11T06:45:58.207656Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "plt.plot(*zip(*accuracy_history), 'bo', label='accuracy')\n",
+    "plt.xlabel('Number of steps')\n",
+    "plt.ylabel('Accuracy value')\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -334,8 +370,7 @@
     "\n",
     "### Test trained model\n",
     "\n",
-    "* test accuracy: 0.9112 for 1 epochs\n",
-    "* test accuracy: 0.9277 for 10 epochs"
+    "* Compare test accuracy for 1 epoch and 10 epochs"
    ]
   },
   {
@@ -343,26 +378,26 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T13:00:11.593736Z",
-     "start_time": "2019-02-27T13:00:04.573011Z"
+     "end_time": "2019-03-11T06:45:58.731757Z",
+     "start_time": "2019-03-11T06:45:58.373976Z"
     }
    },
    "outputs": [],
    "source": [
-    "accuracy = tf.contrib.eager.metrics.Accuracy()\n",
+    "accuracy = tf.keras.metrics.Accuracy()\n",
     "\n",
     "for images, labels in test_dataset:\n",
-    "  logits = model(images, training=False)\n",
-    "  accuracy(labels=labels, predictions=tf.cast(tf.argmax(logits, 1), tf.int32))\n",
+    "  predictions = model(images, training=False)\n",
+    "  accuracy(labels, tf.argmax(predictions, axis=1))\n",
     "  \n",
-    "print(\"test accuracy: {}\".format(accuracy.result()))"
+    "print(\"test accuracy: {:.3f}\".format(accuracy.result()))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plot test set"
+    "### Plot for test set"
    ]
   },
   {
@@ -370,8 +405,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T13:00:11.601652Z",
-     "start_time": "2019-02-27T13:00:11.596536Z"
+     "end_time": "2019-03-11T06:45:58.738883Z",
+     "start_time": "2019-03-11T06:45:58.734854Z"
     }
    },
    "outputs": [],
@@ -384,8 +419,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T13:00:12.667862Z",
-     "start_time": "2019-02-27T13:00:11.605134Z"
+     "end_time": "2019-03-11T06:45:59.698304Z",
+     "start_time": "2019-03-11T06:45:58.743979Z"
     }
    },
    "outputs": [],
