--- a/tf.version.2/02.regression/02.mnist.model.fit.ipynb
+++ b/tf.version.2/02.regression/02.mnist.model.fit.ipynb
@@ -22,8 +22,8 @@
     "  for step in num_batches: # num_batches = int(data_size / batch_size)\n",
     "    1. sampling mini-batches with batch_size\n",
     "      1-1. data augmentation [if you need (actually always)]\n",
-    "    2. calculate the logits # logits = f(x)\n",
-    "    3. calculate the loss # loss = loss(logits, labels)\n",
+    "    2. calculate the predictions # predictions = f(x)\n",
+    "    3. calculate the loss # loss = loss(labels, predictions)\n",
     "    4. calculate the gradient with respect to weights\n",
     "    5. update weights\n",
     "```"
@@ -41,8 +41,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T13:32:09.038941Z",
-     "start_time": "2019-02-27T13:32:07.267178Z"
+     "end_time": "2019-03-11T06:50:09.386388Z",
+     "start_time": "2019-03-11T06:50:07.756789Z"
     }
    },
    "outputs": [],
@@ -71,8 +71,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T13:32:09.151540Z",
-     "start_time": "2019-02-27T13:32:09.142056Z"
+     "end_time": "2019-03-11T06:50:09.409839Z",
+     "start_time": "2019-03-11T06:50:09.398159Z"
     }
    },
    "outputs": [],
@@ -92,8 +92,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T13:32:10.044459Z",
-     "start_time": "2019-02-27T13:32:09.273095Z"
+     "end_time": "2019-03-11T06:50:10.971805Z",
+     "start_time": "2019-03-11T06:50:10.202174Z"
     }
    },
    "outputs": [],
@@ -125,8 +125,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T13:32:10.435028Z",
-     "start_time": "2019-02-27T13:32:10.155173Z"
+     "end_time": "2019-03-11T06:50:12.516972Z",
+     "start_time": "2019-03-11T06:50:12.314191Z"
     }
    },
    "outputs": [],
@@ -153,8 +153,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T13:32:10.568591Z",
-     "start_time": "2019-02-27T13:32:10.562330Z"
+     "end_time": "2019-03-11T06:50:13.169781Z",
+     "start_time": "2019-03-11T06:50:13.146599Z"
     }
    },
    "outputs": [],
@@ -186,8 +186,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T13:32:10.709642Z",
-     "start_time": "2019-02-27T13:32:10.698315Z"
+     "end_time": "2019-03-11T06:50:17.750494Z",
+     "start_time": "2019-03-11T06:50:17.740962Z"
     }
    },
    "outputs": [],
@@ -202,8 +202,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T13:32:10.838915Z",
-     "start_time": "2019-02-27T13:32:10.834986Z"
+     "end_time": "2019-03-11T06:50:26.807140Z",
+     "start_time": "2019-03-11T06:50:26.803762Z"
     }
    },
    "outputs": [],
@@ -225,8 +225,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T13:32:42.532786Z",
-     "start_time": "2019-02-27T13:32:40.177833Z"
+     "end_time": "2019-03-11T06:51:01.958859Z",
+     "start_time": "2019-03-11T06:50:38.996084Z"
     }
    },
    "outputs": [],
@@ -254,8 +254,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T13:30:11.683811Z",
-     "start_time": "2019-02-27T13:30:11.678004Z"
+     "end_time": "2019-03-11T06:51:03.948937Z",
+     "start_time": "2019-03-11T06:51:03.941971Z"
     }
    },
    "outputs": [],
@@ -268,8 +268,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T13:30:24.093215Z",
-     "start_time": "2019-02-27T13:30:23.646306Z"
+     "end_time": "2019-03-11T06:51:12.686509Z",
+     "start_time": "2019-03-11T06:51:12.363440Z"
     }
    },
    "outputs": [],
@@ -305,8 +305,7 @@
     "\n",
     "### Test trained model\n",
     "\n",
-    "* test accuracy: 0.9112 for 1 epochs\n",
-    "* test accuracy: 0.9277 for 10 epochs"
+    "* Compare test accuracy for 1 epoch and 10 epochs"
    ]
   },
   {
@@ -314,8 +313,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T13:33:14.969892Z",
-     "start_time": "2019-02-27T13:33:14.426744Z"
+     "end_time": "2019-03-11T06:51:51.458065Z",
+     "start_time": "2019-03-11T06:51:51.223058Z"
     }
    },
    "outputs": [],
@@ -328,8 +327,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T13:33:15.902811Z",
-     "start_time": "2019-02-27T13:33:15.896990Z"
+     "end_time": "2019-03-11T06:51:53.209509Z",
+     "start_time": "2019-03-11T06:51:53.205148Z"
     }
    },
    "outputs": [],
