--- a/tf.version.2/03.cnn/01.mnist.LeNet5.ipynb
+++ b/tf.version.2/03.cnn/01.mnist.LeNet5.ipynb
@@ -23,8 +23,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T12:49:36.901256Z",
-     "start_time": "2019-02-27T12:49:34.180892Z"
+     "end_time": "2019-03-11T07:09:49.114986Z",
+     "start_time": "2019-03-11T07:09:47.024783Z"
     }
    },
    "outputs": [],
@@ -60,8 +60,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T12:49:37.717712Z",
-     "start_time": "2019-02-27T12:49:36.905690Z"
+     "end_time": "2019-03-11T07:09:50.009863Z",
+     "start_time": "2019-03-11T07:09:49.118107Z"
     }
    },
    "outputs": [],
@@ -93,8 +93,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T12:49:37.981891Z",
-     "start_time": "2019-02-27T12:49:37.720200Z"
+     "end_time": "2019-03-11T07:09:50.199377Z",
+     "start_time": "2019-03-11T07:09:50.012083Z"
     }
    },
    "outputs": [],
@@ -121,18 +121,18 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T12:49:38.010648Z",
-     "start_time": "2019-02-27T12:49:37.987501Z"
+     "end_time": "2019-03-11T07:09:50.239047Z",
+     "start_time": "2019-03-11T07:09:50.205317Z"
     }
    },
    "outputs": [],
    "source": [
     "tf.set_random_seed(219)\n",
     "batch_size = 32\n",
-    "max_epochs = 1\n",
+    "max_epochs = 10\n",
     "\n",
     "# for train\n",
-    "train_dataset = tf.data.Dataset.from_tensor_slices((train_data, train_labels))\n",
+    "train_dataset = tf.data.Dataset.from_tensor_slices((train_data[:500], train_labels[:500]))\n",
     "train_dataset = train_dataset.shuffle(buffer_size = 10000)\n",
     "train_dataset = train_dataset.batch(batch_size = batch_size)\n",
     "print(train_dataset)\n",
@@ -157,8 +157,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T12:49:38.034877Z",
-     "start_time": "2019-02-27T12:49:38.017253Z"
+     "end_time": "2019-03-11T07:09:50.263008Z",
+     "start_time": "2019-03-11T07:09:50.245169Z"
     }
    },
    "outputs": [],
@@ -172,7 +172,7 @@
     "  layers.MaxPool2D(),\n",
     "  layers.Flatten(),\n",
     "  layers.Dense(1024, activation='relu'),\n",
-    "  layers.Dense(10)])"
+    "  layers.Dense(10, activation='softmax')])"
    ]
   },
   {
@@ -180,15 +180,15 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T12:49:38.169114Z",
-     "start_time": "2019-02-27T12:49:38.038776Z"
+     "end_time": "2019-03-11T07:09:50.355056Z",
+     "start_time": "2019-03-11T07:09:50.265074Z"
     }
    },
    "outputs": [],
    "source": [
     "# without training, just inference a model in eager execution:\n",
     "for images, labels in train_dataset.take(1):\n",
-    "  print(\"Logits: \", model(images[0:3]).shape)"
+    "  print(\"predictions: \", model(images[0:3]).shape)"
    ]
   },
   {
@@ -196,8 +196,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T12:49:38.178695Z",
-     "start_time": "2019-02-27T12:49:38.171253Z"
+     "end_time": "2019-03-11T07:09:50.366854Z",
+     "start_time": "2019-03-11T07:09:50.359069Z"
     }
    },
    "outputs": [],
@@ -219,14 +219,23 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T12:49:38.190617Z",
-     "start_time": "2019-02-27T12:49:38.184551Z"
+     "end_time": "2019-03-11T07:09:50.394798Z",
+     "start_time": "2019-03-11T07:09:50.371776Z"
     }
    },
    "outputs": [],
    "source": [
+    "# use Adam optimizer \n",
     "optimizer = tf.train.AdamOptimizer(1e-4)\n",
-    "loss_history = []"
+    "#optimizer = tf.keras.optimizers.Adam(1e-4)\n",
+    "\n",
+    "# record loss and accuracy for every epoch\n",
+    "mean_loss = tf.keras.metrics.Mean(\"loss\", )\n",
+    "mean_accuracy = tf.keras.metrics.Mean(\"accuracy\")\n",
+    "\n",
+    "# save loss and accuracy history for plot\n",
+    "loss_history = []\n",
+    "accuracy_history = [(0, 0.0)]"
    ]
   },
   {
@@ -241,31 +250,43 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T12:52:50.716780Z",
-     "start_time": "2019-02-27T12:49:38.193308Z"
+     "end_time": "2019-03-11T07:10:06.899078Z",
+     "start_time": "2019-03-11T07:09:50.397445Z"
     }
    },
    "outputs": [],
    "source": [
     "global_step = tf.train.get_or_create_global_step()\n",
+    "print(\"start training!\")\n",
     "for epoch in range(max_epochs):\n",
-    "  for images, labels in train_dataset:\n",
+    "  for step, (images, labels) in enumerate(train_dataset):\n",
     "    start_time = time.time()\n",
     "    with tf.GradientTape() as tape:\n",
-    "      logits = model(images, training=True)\n",
-    "      loss_value = tf.losses.sparse_softmax_cross_entropy(labels, logits)\n",
+    "      predictions = model(images, training=True)\n",
+    "      #loss_value = tf.losses.sparse_softmax_cross_entropy(labels, logits)\n",
+    "      loss_value = tf.reduce_mean(tf.keras.losses.sparse_categorical_crossentropy(labels, predictions))\n",
+    "      acc_value = tf.reduce_mean(tf.keras.metrics.categorical_accuracy(labels, tf.argmax(predictions, axis=1)))\n",
     "\n",
-    "    loss_history.append(loss_value.numpy())\n",
     "    grads = tape.gradient(loss_value, model.variables)\n",
     "    optimizer.apply_gradients(zip(grads, model.variables),\n",
     "                              global_step=global_step)\n",
     "\n",
-    "    if global_step.numpy() % 100 == 0:\n",
+    "    mean_loss(loss_value)\n",
+    "    mean_accuracy(acc_value)\n",
+    "    loss_history.append((global_step.numpy(), mean_loss.result().numpy()))\n",
+    "\n",
+    "    if global_step.numpy() % 10 == 0:\n",
     "      clear_output(wait=True)\n",
     "      duration = time.time() - start_time\n",
     "      examples_per_sec = batch_size / float(duration)\n",
-    "      epochs = batch_size * global_step.numpy() / float(len(train_data))\n",
+    "      epochs = epoch + step * batch_size / float(len(train_data))\n",
     "      print(\"epochs: {:.2f}, step: {}, loss: {:g}, ({:.2f} examples/sec; {:.3f} sec/batch)\".format(epochs, global_step.numpy(), loss_value, examples_per_sec, duration))\n",
+    "      \n",
+    "  # save mean accuracy for plot\n",
+    "  accuracy_history.append((global_step.numpy(), mean_accuracy.result().numpy()))\n",
+    "\n",
+    "  # clear the history\n",
+    "  mean_accuracy.reset_states()\n",
     "\n",
     "print(\"training done!\")"
    ]
@@ -282,15 +303,33 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T12:52:50.921893Z",
-     "start_time": "2019-02-27T12:52:50.718949Z"
+     "end_time": "2019-03-11T07:10:07.105811Z",
+     "start_time": "2019-03-11T07:10:06.903043Z"
     }
    },
    "outputs": [],
    "source": [
-    "plt.plot(loss_history, label='loss')\n",
+    "plt.plot(*zip(*loss_history), label='loss')\n",
     "plt.xlabel('Number of steps')\n",
     "plt.ylabel('Loss value [cross entropy]')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-11T07:10:07.354628Z",
+     "start_time": "2019-03-11T07:10:07.111155Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "plt.plot(*zip(*accuracy_history), 'bo', label='accuracy')\n",
+    "plt.xlabel('Number of steps')\n",
+    "plt.ylabel('Accuracy value')\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -311,19 +350,19 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T12:53:05.445519Z",
-     "start_time": "2019-02-27T12:52:50.925487Z"
+     "end_time": "2019-03-11T07:10:15.798009Z",
+     "start_time": "2019-03-11T07:10:07.360906Z"
     }
    },
    "outputs": [],
    "source": [
-    "accuracy = tf.contrib.eager.metrics.Accuracy()\n",
+    "accuracy = tf.keras.metrics.Accuracy()\n",
     "\n",
     "for images, labels in test_dataset:\n",
-    "  logits = model(images, training=False)\n",
-    "  accuracy(labels=labels, predictions=tf.cast(tf.argmax(logits, 1), tf.int32))\n",
+    "  predictions = model(images, training=False)\n",
+    "  accuracy(labels, tf.argmax(predictions, axis=1))\n",
     "  \n",
-    "print(\"test accuracy: {}\".format(accuracy.result()))"
+    "print(\"test accuracy: {:.3f}\".format(accuracy.result()))"
    ]
   },
   {
@@ -338,8 +377,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T12:53:05.451783Z",
-     "start_time": "2019-02-27T12:53:05.447924Z"
+     "end_time": "2019-03-11T07:10:15.806711Z",
+     "start_time": "2019-03-11T07:10:15.802945Z"
     }
    },
    "outputs": [],
@@ -352,8 +391,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-27T12:53:06.451038Z",
-     "start_time": "2019-02-27T12:53:05.454873Z"
+     "end_time": "2019-03-11T07:10:16.581577Z",
+     "start_time": "2019-03-11T07:10:15.809747Z"
     }
    },
    "outputs": [],
@@ -379,9 +418,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
-   "name": "python3"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
