--- a/tf.version.2/02.regression/01.mnist.tf.data.eager.ipynb
+++ b/tf.version.2/02.regression/01.mnist.tf.data.eager.ipynb
@@ -50,6 +50,7 @@
     "from __future__ import absolute_import\n",
     "from __future__ import division\n",
     "from __future__ import print_function\n",
+    "from __future__ import unicode_literals\n",
     "\n",
     "import os\n",
     "import time\n",
@@ -131,7 +132,7 @@
    },
    "outputs": [],
    "source": [
-    "index = 123\n",
+    "index = 1234\n",
     "print(\"label = {}\".format(train_labels[index]))\n",
     "plt.imshow(train_data[index].reshape(28, 28))\n",
     "plt.colorbar()\n",
@@ -151,6 +152,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def one_hot_label(image, label):\n",
+    "  label = tf.one_hot(label, depth=10)\n",
+    "  return image, label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-11T06:45:39.245935Z",
@@ -159,18 +171,21 @@
    },
    "outputs": [],
    "source": [
-    "tf.set_random_seed(219)\n",
+    "tf.random.set_random_seed(219)\n",
     "batch_size = 32\n",
-    "max_epochs = 1\n",
+    "max_epochs = 5\n",
     "\n",
     "# for train\n",
+    "N = len(train_data)\n",
     "train_dataset = tf.data.Dataset.from_tensor_slices((train_data, train_labels))\n",
     "train_dataset = train_dataset.shuffle(buffer_size=10000)\n",
+    "train_dataset = train_dataset.map(one_hot_label)\n",
     "train_dataset = train_dataset.batch(batch_size=batch_size)\n",
     "print(train_dataset)\n",
     "\n",
     "# for test\n",
     "test_dataset = tf.data.Dataset.from_tensor_slices((test_data, test_labels))\n",
+    "test_dataset = test_dataset.map(one_hot_label)\n",
     "test_dataset = test_dataset.batch(batch_size=batch_size)\n",
     "print(test_dataset)"
    ]
@@ -195,14 +210,14 @@
    },
    "outputs": [],
    "source": [
-    "model = tf.keras.models.Sequential([\n",
+    "model = tf.keras.models.Sequential()\n",
+    "\n",
     "# Adds a densely-connected layer with 64 units to the model:\n",
-    "#layers.Dense(64, activation='relu'),\n",
+    "#model.add(layers.Dense(64, activation='relu'))\n",
     "# Add another:\n",
-    "#layers.Dense(64, activation='relu'),\n",
+    "#model.add(layers.Dense(64, activation='relu'))\n",
     "# Add a softmax layer with 10 output units:\n",
-    "#layers.Dense(10)])\n",
-    "layers.Dense(10, activation='softmax')])"
+    "model.add(layers.Dense(10, activation='softmax'))"
    ]
   },
   {
@@ -218,8 +233,8 @@
    "source": [
     "# without training, just inference a model in eager execution:\n",
     "for images, labels in train_dataset.take(1):\n",
-    "  print(\"Predictions: \", model(images[0:1]).numpy())\n",
-    "  predictions = model(images, training=True)"
+    "  predictions = model(images[0:1], training=False)\n",
+    "  print(\"Predictions: \", predictions.numpy())"
    ]
   },
   {
@@ -242,6 +257,23 @@
    "source": [
     "## Train a model\n",
     "\n",
+    "### Define loss and accuray functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss = tf.keras.losses.CategoricalCrossentropy()\n",
+    "accuracy = tf.keras.metrics.CategoricalAccuracy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Define a optimizer"
    ]
   },
@@ -258,7 +290,6 @@
    "source": [
     "# use SGD optimizer\n",
     "optimizer = tf.train.GradientDescentOptimizer(0.5)\n",
-    "#optimizer = tf.keras.optimizers.SGD(0.5)\n",
     "\n",
     "# record accuracy for every epoch\n",
     "mean_accuracy = tf.keras.metrics.Mean(\"accuracy\")\n",
@@ -286,29 +317,31 @@
    },
    "outputs": [],
    "source": [
-    "global_step = tf.train.get_or_create_global_step()\n",
+    "global_step = tf.Variable(0, trainable=False)\n",
+    "num_batches_per_epoch = int(N / batch_size)\n",
     "for epoch in range(max_epochs):\n",
-    "  for (step, (images, labels)) in enumerate(train_dataset):\n",
+    "  for step, (images, labels) in enumerate(train_dataset):\n",
     "    start_time = time.time()\n",
+    "    \n",
     "    with tf.GradientTape() as tape:\n",
     "      predictions = model(images, training=True)\n",
-    "      #loss_value = tf.losses.sparse_softmax_cross_entropy(labels, logits)\n",
-    "      loss_value = tf.reduce_mean(tf.keras.losses.sparse_categorical_crossentropy(labels, predictions))\n",
-    "      acc_value = tf.reduce_mean(tf.keras.metrics.categorical_accuracy(labels, tf.argmax(predictions, axis=1)))\n",
+    "      loss_value = loss(labels, predictions)\n",
+    "      acc_value = accuracy(labels, predictions)\n",
     "\n",
-    "    grads = tape.gradient(loss_value, model.variables)\n",
-    "    optimizer.apply_gradients(zip(grads, model.variables),\n",
-    "                              global_step=global_step)\n",
+    "    grads = tape.gradient(loss_value, model.trainable_variables)\n",
+    "    optimizer.apply_gradients(zip(grads, model.trainable_variables))\n",
+    "    global_step.assign_add(1)\n",
     "    \n",
     "    loss_history.append((global_step.numpy(), loss_value.numpy()))\n",
     "    mean_accuracy(acc_value)\n",
     "\n",
     "    if global_step.numpy() % 100 == 0:\n",
     "      clear_output(wait=True)\n",
+    "      epochs = epoch + step / float(num_batches_per_epoch)\n",
     "      duration = time.time() - start_time\n",
     "      examples_per_sec = batch_size / float(duration)\n",
-    "      epochs = epoch + step * batch_size / float(len(train_data))\n",
-    "      print(\"epochs: {:.2f}, step: {}, loss: {:g}, ({:.2f} examples/sec; {:.4f} sec/batch)\".format(epochs, global_step.numpy(), loss_value.numpy(), examples_per_sec, duration))\n",
+    "      print(\"epochs: {:.2f}, step: {}, loss: {:.3g}, accuracy: {:.4g} ({:.2f} examples/sec; {:.4f} sec/batch)\".format(\n",
+    "          epochs, global_step.numpy(), loss_value.numpy(), acc_value.numpy()*100, examples_per_sec, duration))\n",
     "      \n",
     "  # save mean accuracy for plot\n",
     "  accuracy_history.append((global_step.numpy(), mean_accuracy.result().numpy()))\n",
@@ -384,13 +417,11 @@
    },
    "outputs": [],
    "source": [
-    "accuracy = tf.keras.metrics.Accuracy()\n",
-    "\n",
     "for images, labels in test_dataset:\n",
     "  predictions = model(images, training=False)\n",
-    "  accuracy(labels, tf.argmax(predictions, axis=1))\n",
+    "  accuracy(labels, predictions)\n",
     "  \n",
-    "print(\"test accuracy: {:.3f}\".format(accuracy.result()))"
+    "print(\"test accuracy: {:.4g}\".format(accuracy.result()))"
    ]
   },
   {
