--- a/tf.version.2/02.regression/02.mnist.model.fit.ipynb
+++ b/tf.version.2/02.regression/02.mnist.model.fit.ipynb
@@ -50,6 +50,7 @@
     "from __future__ import absolute_import\n",
     "from __future__ import division\n",
     "from __future__ import print_function\n",
+    "from __future__ import unicode_literals\n",
     "\n",
     "import os\n",
     "import time\n",
@@ -105,7 +106,7 @@
     "train_data = train_data / 255.\n",
     "train_data = train_data.reshape(-1, 784)\n",
     "train_data = train_data.astype(np.float32)\n",
-    "train_labels = train_labels.astype(np.float32)\n",
+    "train_labels = train_labels.astype(np.int32)\n",
     "\n",
     "test_data = test_data / 255.\n",
     "test_data = test_data.reshape(-1, 784)\n",
@@ -131,7 +132,7 @@
    },
    "outputs": [],
    "source": [
-    "index = 123\n",
+    "index = 1234\n",
     "print(\"label = {}\".format(train_labels[index]))\n",
     "plt.imshow(train_data[index].reshape(28, 28))\n",
     "plt.colorbar()\n",
@@ -159,14 +160,14 @@
    },
    "outputs": [],
    "source": [
-    "model = tf.keras.models.Sequential([\n",
+    "model = tf.keras.models.Sequential()\n",
+    "\n",
     "# Adds a densely-connected layer with 64 units to the model:\n",
-    "#layers.Dense(64, activation='relu'),\n",
+    "#model.add(layers.Dense(64, activation='relu'))\n",
     "# Add another:\n",
-    "#layers.Dense(64, activation='relu'),\n",
+    "#model.add(layers.Dense(64, activation='relu'))\n",
     "# Add a softmax layer with 10 output units:\n",
-    "#layers.Dense(10)])\n",
-    "layers.Dense(10, activation='softmax')])"
+    "model.add(layers.Dense(10, activation='softmax'))"
    ]
   },
   {
@@ -200,6 +201,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# without training, just inference a model in eager execution:\n",
+    "predictions = model(train_data[0:1], training=False)\n",
+    "print(\"Predictions: \", predictions.numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-11T06:50:26.807140Z",
@@ -208,7 +220,7 @@
    },
    "outputs": [],
    "source": [
-    "#model.summary()"
+    "model.summary()"
    ]
   },
   {
@@ -233,6 +245,7 @@
    "source": [
     "batch_size = 32\n",
     "max_epochs = 10\n",
+    "\n",
     "# using `numpy type` data\n",
     "history = model.fit(train_data, train_labels,\n",
     "                    batch_size=batch_size, epochs=max_epochs,\n",
