--- a/tf.version.2/01.tf.basic/02.guideline.eager.ipynb
+++ b/tf.version.2/01.tf.basic/02.guideline.eager.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "# Guideline on Eager Execution\n",
     "\n",
+    "* 이 코드는 [TensorFlow official Guide `eager execution` 문서](https://www.tensorflow.org/guide/eager)를 정리한 것이다.\n",
     "\n",
     "[Eager execution](https://www.tensorflow.org/guide/eager#build_a_model) is a flexible machine learning platform for research and experimentation, providing:\n",
     "\n",
@@ -23,12 +24,15 @@
     "from __future__ import absolute_import\n",
     "from __future__ import division\n",
     "from __future__ import print_function\n",
+    "from __future__ import unicode_literals\n",
     "\n",
     "import os\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
     "\n",
     "import tensorflow as tf\n",
-    "\n",
+    "from tensorflow.keras import layers\n",
     "tf.enable_eager_execution()\n",
     "\n",
     "print(tf.VERSION)"
@@ -91,8 +95,8 @@
    "outputs": [],
    "source": [
     "model = tf.keras.Sequential([\n",
-    "  tf.keras.layers.Dense(10, input_shape=(784,)),  # must declare input shape\n",
-    "  tf.keras.layers.Dense(10)\n",
+    "  layers.Dense(10, input_shape=(784,)),  # must declare input shape\n",
+    "  layers.Dense(10)\n",
     "])"
    ]
   },
@@ -116,8 +120,8 @@
     "class MNISTModel(tf.keras.Model):\n",
     "  def __init__(self):\n",
     "    super(MNISTModel, self).__init__()\n",
-    "    self.dense1 = tf.keras.layers.Dense(units=10)\n",
-    "    self.dense2 = tf.keras.layers.Dense(units=10)\n",
+    "    self.dense1 = layers.Dense(units=10)\n",
+    "    self.dense2 = layers.Dense(units=10)\n",
     "\n",
     "  def call(self, input):\n",
     "    \"\"\"Run the model.\"\"\"\n",
@@ -188,10 +192,10 @@
    "source": [
     "# Build the model\n",
     "mnist_model = tf.keras.Sequential([\n",
-    "  tf.keras.layers.Conv2D(16, [3,3], activation='relu'),\n",
-    "  tf.keras.layers.Conv2D(16, [3,3], activation='relu'),\n",
-    "  tf.keras.layers.GlobalAveragePooling2D(),\n",
-    "  tf.keras.layers.Dense(10)\n",
+    "  layers.Conv2D(16, [3,3], activation='relu'),\n",
+    "  layers.Conv2D(16, [3,3], activation='relu'),\n",
+    "  layers.GlobalAveragePooling2D(),\n",
+    "  layers.Dense(10)\n",
     "])"
    ]
   },
@@ -243,8 +247,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "plt.plot(loss_history)\n",
     "plt.xlabel('Batch #')\n",
     "plt.ylabel('Loss [entropy]')\n",
@@ -345,20 +347,19 @@
    "outputs": [],
    "source": [
     "model = tf.keras.Sequential([\n",
-    "  tf.keras.layers.Conv2D(16, [3,3], activation='relu'),\n",
-    "  tf.keras.layers.GlobalAveragePooling2D(),\n",
-    "  tf.keras.layers.Dense(10)\n",
+    "  layers.Conv2D(16, [3,3], activation='relu'),\n",
+    "  layers.GlobalAveragePooling2D(),\n",
+    "  layers.Dense(10)\n",
     "])\n",
+    "\n",
     "optimizer = tf.train.AdamOptimizer(learning_rate=0.001)\n",
+    "\n",
     "checkpoint_dir = './model_dir'\n",
     "os.makedirs(checkpoint_dir, exist_ok=True)\n",
     "checkpoint_prefix = os.path.join(checkpoint_dir, \"ckpt\")\n",
     "root = tf.train.Checkpoint(optimizer=optimizer,\n",
     "                           model=model,\n",
-    "                           optimizer_step=tf.train.get_or_create_global_step())\n",
-    "\n",
-    "root.save(checkpoint_prefix)\n",
-    "root.restore(tf.train.latest_checkpoint(checkpoint_dir))"
+    "                           optimizer_step=tf.train.get_or_create_global_step())"
    ]
   },
   {
@@ -366,14 +367,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Save a model\n",
+    "root.save(checkpoint_prefix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Restore a model\n",
+    "root.restore(tf.train.latest_checkpoint(checkpoint_dir))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
-   "name": "python3"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -386,6 +400,66 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.5"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
