--- a/tf.version.2/02.regression/02.mnist.model.fit.ipynb
+++ b/tf.version.2/02.regression/02.mnist.model.fit.ipynb
@@ -111,7 +111,7 @@
     "test_data = test_data / 255.\n",
     "test_data = test_data.reshape(-1, 784)\n",
     "test_data = test_data.astype(np.float32)\n",
-    "test_labels = test_labels.astype(np.float32)"
+    "test_labels = test_labels.astype(np.int32)"
    ]
   },
   {
